k8s-helm-main/k8s-helm-main/msp-service/efk-stack/ingress/kibana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: efk-stack
  name: kibana-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: internal-alb
    alb.ingress.kubernetes.io/group.order: "5"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: "eks-internal-alb"
    alb.ingress.kubernetes.io/security-groups: sg-024a64ac809643f16
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "false"
    # SSL
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:360230412074:certificate/15bad1f5-bf77-4ebd-a2a7-e79991d13735
    #alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  rules:
    - host: kibana.ahnlabcloud.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana-svc
              port:
                number: 80
